--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">notification</string>
     <string name="time_reamining">Time Reamining: %d</string>
+    <string name="snooze">"ping ping "</string>
 </resources>
